--- a/jaxrs-quickstart/src/main/resources/archetype-resources/war/App.css
+++ b/jaxrs-quickstart/src/main/resources/archetype-resources/war/App.css
@@ -15,9 +15,11 @@
  */
 
 body {
-    background-color: #ffffff;
+    background-color: white;
     color: black;
     font-family: Arial, sans-serif;
-    font-size: small;
-    margin: 8px;
+}
+
+.new-customer-table {
+	margin-left: 15px;	
 }
