--- a/jaxrs-quickstart/src/main/resources/archetype-resources/src/main/webapp/App.css
+++ b/jaxrs-quickstart/src/main/resources/archetype-resources/src/main/webapp/App.css
@@ -1,9 +1,23 @@
 body {
-    background-color: white;
-    color: black;
-    font-family: Arial, sans-serif;
+  background-color: #000000;
+  color: #FF6600;
+  font-family: Georgia, Palatino, serif !important;
 }
 
-.new-customer-table {
-	margin-left: 15px;	
+.whole-customer-table {
+  padding: 30px;
+  border-radius: 12px;
+  background: rgb(82, 62, 62);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 35px;
+}
+.new-customer-table {   
+  margin-left: 15px;
+}
+.background-image {
+  position: fixed;
+  bottom: 25px;
+  right: 50px;
+  height: 150px;
 }
